@@ -60,6 +60,7 @@ EGGNOG = ANN / "eggnog"
 PHYLOPHLAN = ANN / "phylophlan"
 PROTEINORTHO = ANN / "proteinortho"
 PROTEINORTHO_NEW = ANN / "proteinortho_new"
+SYLPH = ANN / "sylph"
 
 # contig annotation
 CONTIG = Path("results/contig_annotate/")
